--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.18.2",
     "init": "^0.1.2",
     "socket.io": "^4.7.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
 }
