--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "init": "^0.1.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "sqlite": "^5.1.1"
   },
   "scripts": {
     "start": "node server.js"
