--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.18.2",
     "init": "^0.1.2",
     "socket.io": "^4.7.2",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   },
   "scripts": {
     "start": "node server.js"
